Closed Bug 1140261 Opened 9 years ago Closed 9 years ago

gecko/ipc/keystore/KeyStore.cpp:142:27: error: comparison of unsigned expression >= 0 is always true [-Werror=type-limits]

Categories

(Firefox OS Graveyard :: Wifi, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox39 fixed)

RESOLVED FIXED
2.2 S8 (20mar)
Tracking Status
firefox39 --- fixed

People

(Reporter: kanru, Assigned: chucklee)

References

Details

Attachments

(1 file, 1 obsolete file)

      No description provided.
Assignee: nobody → chuckli0706
KeyStore is an implementation corresponding to keystore daemon in Android [1], to support certificate/private key access from wpa_supplicant.
And I think we need another person to keep KeyStore functional except me.

Since KeyStore is a part of Wifi, Henry, I would like to have you involved if you are interested.

[1] http://androidxref.com/5.0.0_r2/xref/system/security/keystore/
Attachment #8574366 - Flags: review?(hchang)
Comment on attachment 8574366 [details] [diff] [review]
Fix compiler error comparison of unsigned expression >= 0 is always true

Review of attachment 8574366 [details] [diff] [review]:
-----------------------------------------------------------------

r+ after fixing the typo. Thanks!

::: ipc/keystore/KeyStore.cpp
@@ +149,2 @@
>                           &signResultSize);
>  

Do you mean 

int32_t ret = sign(name, signData, (size_t)(signDataSize), &signResult,
                   &signResultSize);
Attachment #8574366 - Flags: review?(hchang) → review+
https://hg.mozilla.org/mozilla-central/rev/e25c3139edca
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S8 (20mar)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: