Bug 1140261 - Fix compiler error comparison of unsigned expression >= 0 is always true. r=hchang